--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <p>Hello, World</p>
+<body width="1440" height="6411" >
+    <div id="header" width="100%" height="1.4%">
+        <div width="83.33%" style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: center;">
+            <div width="50%"><img style="float: left;" src="Wishbone-Logotype-Dark.svg" alt="Иконка" width="18.33%" height="21.11%"></div>
+            <div width="50%">
+
+            </div>
+
+
+        </div>
+    </div>
+    <div id="content1" width="100%" height="11.23%">
+        <div width="50%" height="100%" ></div><img src="IMAGE.png" alt="Описание изображения"></div>
+
+    </div>
 </body>
 </html>
