header(done) content1(done)

--- a/index.html
+++ b/index.html
@@ -4,21 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body width="1440" height="6411" >
-    <div id="header" width="100%" height="1.4%">
-        <div width="83.33%" style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: center;">
-            <div width="50%"><img style="float: left;" src="Wishbone-Logotype-Dark.svg" alt="Иконка" width="18.33%" height="21.11%"></div>
-            <div width="50%">
-
+<body>
+<div style=" width: 100%; height: 6411px ;margin: 0;padding: 0; display: flex; flex-direction: column;flex-wrap: wrap-reverse;justify-content: flex-start;">
+    <div id="header" style= "width: 100%; height:90px; display: flex;flex-direction: row;justify-content: center;align-items: center;">
+        <div style= "width:83.33%;height: 100%; display: flex;flex-direction: row;justify-content: center;align-items: center;">
+            <div style= "width:50%;">
+                <img style="float: left; width:37.62%; height:21.11%;" src="header.svg" alt="Иконка"></div>
+            <div style= "width:50%;height: 55.56%; display: flex;flex-direction: row;justify-content: center;align-items: center;gap: 31px; ">
+                <a class="headers"> Projects</a>
+                <a class="headers"> About</a>
+                <a class="headers"> News</a>
+                <a class="headers"> Team</a>
+                <a class="headers"> Contact</a>
+                <button class="headbut" style="width: 26.5% ;height:92%;border-radius: 14px;border:0;">Get template</button>
             </div>
-
-
         </div>
     </div>
-    <div id="content1" width="100%" height="11.23%">
-        <div width="50%" height="100%" ></div><img src="IMAGE.png" alt="Описание изображения"></div>
+    <div id="content1" style= "width: 100%; height: 720px;display: flex;flex-direction: row;">
+        <div style= "display: flex; flex-direction:column;justify-content: center;align-items: center;flex:1; height: 100%; background-color: #ECE7E4;">
+            <div style= "display: flex;flex-direction:column;width: 83.33%;height: 78.61%;">
+                <div class="fon" style="font-size: 14px;">WISHONE+PARTNERS</div>
+                <div class="fon" style="font-size: 64px;">The home of 
+                    beautiful 
+                    architecture.</div>
+                <div class="fon" style="font-size: 16px; width: 84.83%;">We are an architecture firm with a focus on beautiful but functional design. At its heart, we believe design is about usability and accessibility — these are the guiding principles for our work. Read more about our previous projects, our process and our team below.</div>
+                <button class="fon" style="font-size: 16px;width: 22.17%; height: 8.13%;border: 0;background-color: #ECE7E4;">Read more</button>
+            </div>
+        </div>
+        <div style= "flex:1; height: 100%; "><img src="content1.png" style=" width:100%; height:100%; object-fit: cover; display:block;"></div>
+    </div>
+    <div id="content2" style= "width: 100%; height: 782px;">
 
     </div>
+    <div id="content3" style="width: 100%; height: 600px; background-image: url('content3.png');">
+
+    </div>
+    <div id="content4" style= "width: 100%; height: 581px;">
+
+    </div>
+    <div id="content5" style= "width: 100%; height: 600px; background-image: url('content5.png');">
+
+    </div>
+    <div id="content6" style= "width: 100%; height: 410px;background: #403E3B;">
+
+    </div>
+    <div id="content7" style= "width: 100%; height: 600px; background-image: url('content7.png');">
+
+    </div>
+    <div id="content4" style= "width: 100%; height: 918px; background: #F7F7F7;">
+
+    </div>
+    <div id="content4" style= "width: 100%; height: 592px;">
+
+    </div>
+    <div id="content4" style= "width: 100%; height: 314px; background: #CEC4BC;">
+
+    </div>
+    <div id="footer" style= "width: 100%; height: 204px;">
+
+    </div>
+    
+</div>
 </body>
 </html>
