content2(done),content3(done),cjntent5(done)

--- a/index.html
+++ b/index.html
@@ -35,31 +35,82 @@
         </div>
         <div style= "flex:1; height: 100%; "><img src="content1.png" style=" width:100%; height:100%; object-fit: cover; display:block;"></div>
     </div>
-    <div id="content2" style= "width: 100%; height: 782px;">
-
+    <div id="content2" style= "width: 100%; height: 782px;display: flex;flex-direction: row;justify-content: center;align-items: center;">
+        <div style="width: 53.33%;height: 74.42%; display: flex;flex-direction: row;">
+            <div style="width: 34.72%;height: 100%;">
+                <p class="c2">
+                    Our firm
+                </p>
+            </div>
+            <div style="width: 65.28%; height: 100%;">
+                <div class="c2-p" style="display: flex;flex-direction: column; ">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+                    </p>
+                </div>
+                <div style="height: 17.18%;display: flex; flex-direction: row;justify-content: start;align-items: center;">
+                    <div>
+                        <img style="border: #CEC4BC 3px ;border-radius: 64px;height: 84%; aspect-ratio: 1/1;" src="IMAGE.png">
+                    </div>
+                    <div class="c2-n" style="width: 39.1% ;height: 100%;display: flex;flex-direction: column;justify-content: center;align-items: center;">
+                        <div style="display: flex;flex-direction: column; flex-wrap: nowrap;justify-content: center; align-items: flex-start;"><p style="font-size: 17px;">Stephen Collier</p>
+                        <p style="font-size: 14px;color: #645C55;">Senior Partner</p></div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="content3" style="width: 100%; height: 600px; background-image: url('content3.png');">
-
+    <div id="content3" style="width: 100%; height: 600px; background-image: url('content3.png');background-repeat: no-repeat;background-size: cover;">
+        <div class="c3" style="width: 20.83%; height: 100%;margin-left:  75% ; display: flex;flex-direction: column; flex-wrap: nowrap;justify-content: center; align-items: flex-start ;">
+            <p style="font-size: 14px; color: #403E3B;">REEDING HOUSE</p>
+            <p style="font-size: 16px; color: #645C55;">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+        </div>
     </div>
-    <div id="content4" style= "width: 100%; height: 581px;">
-
+    <div id="content4" style= "width: 100%; height: 581px; display: flex;flex-direction: row;justify-content: center;align-items: center">
+        <div style="width: 83.33%; height: 65.58%;display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: space-between;align-items: center; gap: 40px;">
+            <div class="c3" style="width: 50%;height: 21.52%; display: flex; flex-direction: column; flex-wrap: nowrap; justify-content: space-between;align-items: center;">
+                <p style="font-size: 14px; color: #645C55;">OUR PROCESS</p>
+                <p style="font-size: 39px;color:#1B1A1A;">How we do what we do.</p>
+            </div>
+            <div style="width: 97.33%;height: 67.98%; display: flex; flex-direction: row;flex-wrap: nowrap;justify-content: space-between;">
+                <div style="width: 32.42%;height: 100%;">
+                    <img style="width: 30.9%;height: 39.38%;" src="i1.svg" alt="Описание изображения">
+                </div>
+                <div style="width: 32.42%;height: 100%;">
+                    <img style="width: 30.9%;height: 39.38%;" src="i2.svg" alt="Описание изображения">
+                </div>
+                <div style="width: 32.42%;height: 100%;">
+                    <img style="width: 30.9%;height: 39.38%;" src="i3.svg" alt="Описание изображения">
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="content5" style= "width: 100%; height: 600px; background-image: url('content5.png');">
-
+    <div id="content5" style= "width: 100%; height: 600px; background-image: url('content5.png');background-repeat: no-repeat;background-size: cover;">
+         <div class="c3" style="width: 20.83%; height: 100%;margin-left:  75% ; display: flex;flex-direction: column; flex-wrap: nowrap;justify-content: center; align-items: flex-start ;">
+            <p style="font-size: 14px; color: #403E3B;">THE MARBLE STAIRCASE</p>
+            <p style="font-size: 16px; color: #645C55;">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+        </div>
     </div>
     <div id="content6" style= "width: 100%; height: 410px;background: #403E3B;">
 
     </div>
-    <div id="content7" style= "width: 100%; height: 600px; background-image: url('content7.png');">
+    <div id="content7" style= "width: 100%; height: 600px; background-image: url('content7.png'); background-repeat: no-repeat;background-size: cover;">
 
     </div>
-    <div id="content4" style= "width: 100%; height: 918px; background: #F7F7F7;">
+    <div id="content8" style= "width: 100%; height: 918px; background: #F7F7F7;">
 
     </div>
-    <div id="content4" style= "width: 100%; height: 592px;">
+    <div id="content9" style= "width: 100%; height: 592px;">
 
     </div>
-    <div id="content4" style= "width: 100%; height: 314px; background: #CEC4BC;">
+    <div id="content10" style= "width: 100%; height: 314px; background: #CEC4BC;">
 
     </div>
     <div id="footer" style= "width: 100%; height: 204px;">
